cargo-features = ["codegen-backend"]

[package]
name = "elytra"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: "full" should be replaced with only needed features
tokio = { version = "1.43.0", features = ["full"] }
libc = "0.2.169"
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["v3"] }
byteorder = "1.5.0"
flate2 = "1.0.28"

[dev-dependencies]
futures = "0.3"
tokio-test = "0.4"
assert_matches = "1.5"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 2

[[test]]
name = "server_integration_test"
path = "tests/server_integration_test.rs"