[package]
name = "elytra-common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
elytra-nbt = { path = "../elytra-nbt" }
byteorder = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_matches = { workspace = true } 
