[package]
name = "elytra-logger"
version.workspace = true
edition.workspace = true

[dependencies]
libc = { workspace = true }
windows-sys = { workspace = true }
once_cell = { workspace = true }

elytra-common = { path = "../elytra-common" }

[dev-dependencies]
assert_matches = { workspace = true } 