[package]
name = "elytra-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
flate2 = { workspace = true }

elytra-wotra = { path = "../elytra-wotra" }
elytra-nbt = { path = "../elytra-nbt" }

[dev-dependencies]
tokio-test = { workspace = true }
assert_matches = { workspace = true } 